--- a/src/main/docs/guide/domainClasses.adoc
+++ b/src/main/docs/guide/domainClasses.adoc
@@ -1,1 +1,27 @@
+We will create Domain classes that serve as the basis for the application. The `Student` and `Classroom` have a one-to-many relationship, where the `Classroom` holds many `Student`(s).
 
+[source, bash]
+----
+> grails create-domain-class Student
+----
+
+Add domain properties to the created class file.
+
+[source, groovy]
+.grails-app/domain/grails/mock/basics/Student.groovy
+----
+include::{sourceDir}/grails-app/domain/grails/mock/basics/Student.groovy[indent=0]
+----
+
+[source, bash]
+----
+> grails create-domain-class Classroom
+----
+
+Again, add domain properties to the created class file. This time note that Classroom `hasMany` Students. This creates the one-to-many relationship.
+
+[source, groovy]
+.grails-app/domain/grails/mock/basics/Classroom.groovy
+----
+include::{sourceDir}/grails-app/domain/grails/mock/basics/Classroom.groovy[indent=0]
+----
