test code sections 3 and 4

--- a/src/main/docs/guide/testCalcAvgGrade.adoc
+++ b/src/main/docs/guide/testCalcAvgGrade.adoc
@@ -15,5 +15,5 @@ Execute the test command to view the test results.
 grails test-app
 ----
 
-<1> Classroom is saved with several Students.
+<1> `Classroom` is saved with several `Students`.
 <2> Invoke the method under test, which will use the saved Domain objects.
