--- a/src/main/docs/guide/testFindStudents.adoc
+++ b/src/main/docs/guide/testFindStudents.adoc
@@ -5,7 +5,9 @@ We will start by testing the search functionality. Previously, while creating th
 ----
 package grails.mock.basics
 
+import grails.test.mixin.Mock
 import grails.test.mixin.TestFor
+import spock.lang.Specification
 
 @TestFor(ClassroomService)
 class ClassroomServiceSpec extends Specification {
