--- a/src/main/docs/guide/domainClasses.adoc
+++ b/src/main/docs/guide/domainClasses.adoc
@@ -1,4 +1,5 @@
 We will create Domain classes that serve as the basis for the application. The `Student` and `Classroom` have a one-to-many relationship, where the `Classroom` holds many `Student`(s).
+A `Student` can be enrolled in one `Classroom` or none.
 
 [source, bash]
 ----
