--- a/src/main/docs/guide/gettingStarted.adoc
+++ b/src/main/docs/guide/gettingStarted.adoc
@@ -1,10 +1,6 @@
-In this guide you are going to...
+In this guide you are going explore Service Testing in Grails. You are going to learn
+about:
 
-- Create a small application based on a Classroom and Students. A service will perform basic functions like finding students, calculating average grades, and simulate sending email.
-- Create unit test spock specification tests that uses Domain and Service mocking.
-
-Use the below documentation for supplemental information purposes:
-
-- http://docs.grails.org/latest/guide/testing.html#unitTesting[Grails Unit Testing]
-- http://spockframework.org/spock/docs/1.0/interaction_based_testing.html[Spock Interaction Based Testing]
-
+- Grails Services Unit tests - Mocking Collaborators
+- Grails Services Unit tests - GORM code
+- Grails Services Integration tests
