--- a/src/main/docs/guide/dynamicFinderServiceTests.adoc
+++ b/src/main/docs/guide/dynamicFinderServiceTests.adoc
@@ -1,4 +1,4 @@
-We are going to use a unit test the dynamic finder with the help of `HibernateSpec`. It allows Hibernate to be used in Grails unit tests. It uses a H2 in-memory database.
+We are going to use a unit test for the dynamic finder with the help of `HibernateSpec`. It allows Hibernate to be used in Grails unit tests. It uses a H2 in-memory database.
 
 [source, groovy]
 .src/test/groovy/grails/mock/basics/StudentServiceSpec.groovy
