--- a/src/main/docs/guide/gormService.adoc
+++ b/src/main/docs/guide/gormService.adoc
@@ -1,4 +1,4 @@
-The next service uses Criteria query with a projection to calculate the average grade of the students enrolled in a classroom identified by its teacher name.
+The next service uses Criteria query with a projection to calculate the average grade of the students enrolled in a classroom, identified by its teacher name.
 
 [source, groovy]
 .grails-app/services/grails/mock/basics/ClassroomService.groovy
