--- a/src/main/docs/guide/serviceWithCollaborators.adoc
+++ b/src/main/docs/guide/serviceWithCollaborators.adoc
@@ -1,5 +1,5 @@
 We have a service which collaborates with another service to perform an action. This is a common use case. We are going to
-learn how to mock collaborators to tests the service logic on isolation.
+learn how to mock collaborators to test the service logic in isolation.
 
 [source, groovy]
 .grails-app/services/grails/mock/basics/ClassroomGradesNotificationService.groovy
