--- a/src/main/docs/guide/integrationTests.adoc
+++ b/src/main/docs/guide/integrationTests.adoc
@@ -1,4 +1,4 @@
-We are going to use an integration test to test the query. A projection query cannot be tested in unit tests.
+We are going to use an integration test to test the query.
 
 [source, groovy]
 .src/integration-test/groovy/grails/mock/basics/ClassroomServiceIntegrationSpec.groovy
