--- a/src/main/docs/guide/runningTheApp.adoc
+++ b/src/main/docs/guide/runningTheApp.adoc
@@ -1,1 +1,15 @@
-include::{commondir}/common-testApp.adoc[]
+To run the tests:
+
+[source, bash]
+----
+./grailsw
+grails> test-app
+grails> open test-report
+----
+
+or
+
+[source, bash]
+----
+./gradlew test
+----
